added social media links and html for list page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Countdown to Christmas!</title>
-	<script src="js/countdown.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Titan+One' rel='stylesheet' type='text/css'>
+	<script src="js/countdown.js"></script>
 </head>
 
 <body>
@@ -47,9 +47,9 @@
 	<div id="xmasList">
 		<div class="xmasPara">
 			<p>Hey kids! Need a easy way to send your Christmas list? Don't wait until the last minute.</p>
-			<p>First, press the button at the bottom to create your Christmas List. Next, fill out the form.</p>
-			<p>Finally, if you're happy with with your list, hit the send button to deliver your list to Santa's inbox.</p>
-			<p>Click to the button to begin.<a href="#" class="button">Create List</a></p>
+			<p>First, press the button at the bottom to make a blank list for your stuff. Next, fill out your Christmas list.</p>
+			<p>Finally, if you're happy with with your list, hit send for instant delivery to the North Pole.</p>
+			<p>Click to the button to begin.<a href="xmaslist.html" class="button">Create a List</a></p>
 		</div> <!-- End xmasPara -->
 	</div> <!-- End xmasList -->
 	
@@ -60,23 +60,23 @@
 			<div class="footerWrap">
 				<div class="social">
 					<h6 class="github">
-						<a href="#">
-							<img src="img/github-32.png" alt="GitHub">
+						<a href="https://github.com/carltonstith">
+							<img src="img/github-32.png" alt="Carlton Stith on GitHub">
 						</a>
 					</h6>
 					<h6 class="twitter">
-						<a href="#">
-							<img src="img/twitter-32.png" alt="Twitter">
+						<a href="https://twitter.com/carltonstith">
+							<img src="img/twitter-32.png" alt="Carlton Stith on Twitter">
 						</a>
 					</h6>
 					<h6 class="linkedin">
-						<a href="#">
-							<img src="img/linkedin-32.png" alt="LinkedIn">
+						<a href="http://www.linkedin.com/in/carltonjstith">
+							<img src="img/linkedin-32.png" alt="Carlton Stith on LinkedIn">
 						</a>
 					</h6>
-					<h6 class="facebook">
-						<a href="#">
-							<img src="img/facebook-32.png" alt="Facebook">
+					<h6 class="codepen">
+						<a href="http://codepen.io/carltonstith/">
+							<img src="img/codepen-32.png" alt="Carlton Stith on CodePen">
 						</a>
 					</h6>
 				</div>
