--- a/xmaslist.html
+++ b/xmaslist.html
@@ -4,6 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Christmas Wish List</title>
+	
+	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Titan+One' rel='stylesheet' type='text/css'>
 	<script src="js/countdown.js"></script>
@@ -13,6 +16,8 @@
 	<h1>Christmas List</h1>
 	<p>Dear Santa,<br>
 	I have been a very good boy/girl this year. Please send me the stuff that I am asking for. Thank you. <br>Sincerely,<br>John Doe</p>
+	
+	
 	<form>
 		<input type="text"></input>
 	</form>
